[gd_scene load_steps=13 format=2]

[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://titleScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Music/Soliloquy.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Backgrounds/foregroundd.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/Menu/createCharacter_hover.png" type="Texture" id=12]
[ext_resource path="res://Assets/Buttons/Menu/createCharacter.png" type="Texture" id=13]
[ext_resource path="res://Assets/Buttons/Menu/createCharacter_pressed.png" type="Texture" id=14]
[ext_resource path="res://Assets/Buttons/Menu/credits_pressed.png" type="Texture" id=15]
[ext_resource path="res://Assets/Buttons/Menu/credits_hover.png" type="Texture" id=16]
[ext_resource path="res://Assets/Buttons/Menu/credits.png" type="Texture" id=17]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_intensity = 2.5
glow_strength = 1.11
glow_blend_mode = 0

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[node name="titleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="foregroundd" type="Sprite" parent="."]
visible = false
position = Vector2( 192, 224 )
scale = Vector2( 1.7075, 1.66028 )
texture = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="createCharacter" type="TextureButton" parent="."]
material = SubResource( 2 )
margin_left = 251.0
margin_top = 438.0
margin_right = 667.0
margin_bottom = 672.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="TextureButton" parent="."]
material = SubResource( 2 )
margin_left = 756.105
margin_top = 439.799
margin_right = 1172.1
margin_bottom = 683.799
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="createCharacter" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
